--- a/Final-Project/css/style.css
+++ b/Final-Project/css/style.css
@@ -290,6 +290,84 @@ h3{
 
 /* Family */
 
+.family{
+    padding-bottom: 10rem;
+}
+
 .family__decsription{
-    
+    text-align: center;
+}
+
+.family__subtitle{
+    font-size: 3rem;
+    line-height: 4rem;
+    font-weight: 700;
+    margin: 4rem 0;
+}
+
+/* Videos */
+
+.video{
+    padding: 10rem 0;
+    background-color: #000;
+    color:#fff;
+    text-align: center;
+}
+
+.video h2{
+    margin-bottom: 3rem;
+    border-bottom: 1px solid #fff;
+}
+
+.video__subtitle{
+    margin-bottom: 10rem;
+}
+
+.video__film{
+    margin: 10rem auto;
+    font-size: 3rem;
+    background-color: #c91818;
+    width: fit-content;
+    padding: 1rem;
+}
+
+/* Footer */
+
+footer{
+    padding: 10rem 0;
+    text-align: center;
+}
+
+.quote{
+    padding: 10rem 0;
+    background-color: #e8e8e8;
+}
+
+blockquote {
+margin: 0;
+color: #3A3C55;
+padding: 30px 30px 30px 90px;
+position: relative;
+font-weight: 300;
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-style: italic;
+}
+blockquote:before {
+    content: "\201C";
+    font-family: serif;
+    position: absolute;
+    left: 20px;
+    top: -35px;
+    color: #949494;
+    width: 50px;
+    height: 50px;
+    font-size: 13rem;
+    line-height: 1.35;
+    text-align: center;
+}
+blockquote p {
+    margin: 0 0 1.6rem 3rem;
+    font-size: 2.7rem;
+    letter-spacing: .05em;
+    line-height: 1.4;
 }
