--- a/Final-Project/css/style.css
+++ b/Final-Project/css/style.css
@@ -82,6 +82,7 @@ h3{
     }
 }
 
+
 .header__top{
     display: flex;
     justify-content: space-between;
@@ -132,6 +133,7 @@ h3{
     margin-top: 70.5rem;
 }
 
+
 .description__top{
     max-width: 42.2rem;
     font-size: 4.5rem;
@@ -148,6 +150,128 @@ h3{
     font-weight: 100;
 }
 
+
+@media only screen and (max-width: 1000px) {
+    .header__top{
+        flex-wrap: wrap;
+        display: block;
+        position: relative;
+    }
+
+    .header__description{
+        flex-wrap: wrap;
+    }
+
+    .description__top, .decription__bottom{
+        max-width: 100%;
+        margin: auto;
+    }
+
+    .header__menu {
+        display: none;
+    }
+}
+
+/* Nav bar burger */
+
+
+
+.header__top .checkbox {
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 32px;
+    top: 60px;
+    right: 20px;
+    z-index: 5;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  .header__top .hamburger-lines {
+    display: block;
+    height: 26px;
+    width: 32px;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .header__top .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: #ffffff;
+  }
+  
+  .header__top .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
+  
+  .header__top .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .header__top .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+  
+  .navbar .menu-items {
+    padding-top: 120px;
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+    height: 100vh;
+    width: 100%;
+    transform: translate(-150%);
+    display: flex;
+    flex-direction: column;
+    margin-left: -40px;
+    padding-left: 50px;
+    transition: transform 0.5s ease-in-out;
+    text-align: center;
+  }
+  
+  .navbar .menu-items li {
+    margin-bottom: 1.2rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  
+  .logo {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    font-size: 1.2rem;
+    color: #0e2431;
+  }
+  
+  .header__top input[type="checkbox"]:checked ~ .menu-items {
+    transform: translateX(0);
+  }
+  
+  .header__top input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+    transform: rotate(45deg);
+  }
+  
+  .header__top input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+    transform: scaleY(0);
+  }
+  
+  .header__top input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+    transform: rotate(-45deg);
+  }
+  
+  .header__top input[type="checkbox"]:checked ~ .logo{
+    display: none;
+  }
+
+
 /* biography */
 
 .biography {
@@ -158,6 +282,7 @@ h3{
     display: flex;
     gap: 10rem;
     justify-content: center;
+    
 }
 
 .biography__desc{
@@ -184,6 +309,36 @@ h3{
 }
 .biography__img-left {
     min-width: 35%;
+}
+
+@media only screen and (max-width: 1000px) {
+    .biography__description{
+        flex-wrap: wrap;
+    }
+
+    .biography__desc{
+        flex-wrap: wrap;
+        gap: 2rem
+    }
+
+    .biography__text{
+        width: 100%;
+    }
+
+    .biography__description-2{
+        flex-wrap: wrap;
+    }
+
+    .biography__description-2 h3{
+        
+        margin: 5rem auto;
+    }
+
+    .biography__desc-right{
+        margin-top: 3rem;
+    }
+
+
 }
 
 /* apple */
@@ -227,6 +382,18 @@ h3{
 
 .appleLogo h3{
     margin: auto;
+}
+
+@media only screen and (max-width: 1200px) {
+    .apple{
+        
+        background: none;
+        background-color: #f0f0f0;
+    }
+
+    .apple__list li {
+
+    }
 }
 
 /* Awards */
@@ -286,6 +453,12 @@ h3{
     font-size: 2.5rem;
     padding: 1rem;
     min-width: 15%;
+}
+
+@media only screen and (max-width: 1000px) {
+    .awards__wrap{
+        flex-wrap: wrap;
+    }
 }
 
 /* Family */
