--- a/Final-Project/css/style.css
+++ b/Final-Project/css/style.css
@@ -44,6 +44,7 @@ h2{
     width: fit-content;
     margin: auto;
     margin-bottom: 9rem;
+    line-height: 4rem;
 }
 
 h3{
@@ -54,6 +55,7 @@ h3{
     color: white;
     padding: 2rem;
     max-width: fit-content;
+    line-height: 4rem;
 }
 
 .container{
@@ -172,6 +174,20 @@ h3{
     }
 }
 
+@media only screen and (max-width: 800px) {
+    .header__description{
+        text-align: center;
+    }
+
+    .description__top{
+        font-size: 3rem;
+    }
+
+    .decription__bottom{
+        font-size: 2rem;
+    }
+}
+
 /* Nav bar burger */
 
 
@@ -199,6 +215,12 @@ h3{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+
+  @media only screen and (min-width: 1001px) {
+    .header__top .hamburger-lines{
+        display: none;
+    }
   }
   
   .header__top .hamburger-lines .line {
